Bugfix(jqGrid): Added a class for word breaking

--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -736,7 +736,7 @@
                                             </ul>
                                         </div>
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqgrid_basic_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table" class="table table-bordered"></table>
+                                            <table id="grid_table" class="table table-bordered word-break"></table>
                                             <div id="grid_pager"></div>
                                         </div>
                                     </div>
@@ -784,7 +784,7 @@
                                                 <button type="button" class="btn btn-primary btn-sm add-new-row">Add new row</button>
                                             </div>
 
-                                            <table id="grid_table_add_new_row_programatically" class="table table-bordered"></table>
+                                            <table id="grid_table_add_new_row_programatically" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_add_new_row_programatically"></div>
 
 
@@ -829,7 +829,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqgrid_with_sticky_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_sticky" class="table table-bordered"></table>
+                                            <table id="grid_table_sticky" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_sticky"></div>
                                         </div>
                                     </div>
@@ -878,7 +878,7 @@
                                                 </button>
                                             </div>
 
-                                            <table id="grid_table_column_chooser" class="table table-bordered"></table>
+                                            <table id="grid_table_column_chooser" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_column_chooser"></div>
                                         </div>
                                     </div>
@@ -925,7 +925,7 @@
                                                 <button type="button" class="btn btn-primary btn-sm check_rows" >Get rows</button>
                                             </div>
 
-                                            <table id="grid_table_with_selectable_rows" class="table table-bordered"></table>
+                                            <table id="grid_table_with_selectable_rows" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_with_selectable_rows"></div>
 
                                             <div class="pad-top-20">
@@ -973,7 +973,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,jqGrid_with_ierarchical_elements_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_with_hierarchy" class="table table-bordered"></table>
+                                            <table id="grid_table_with_hierarchy" class="table table-bordered word-break"></table>
 
                                         </div>
                                     </div>
@@ -1016,7 +1016,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqGrid_with_subgrid_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_with_subgrid" class="table table-bordered"></table>
+                                            <table id="grid_table_with_subgrid" class="table table-bordered word-break"></table>
 
                                         </div>
                                     </div>
@@ -1059,7 +1059,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqGrid_with_inline_editing_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_with_inline_edit" class="table table-bordered"></table>
+                                            <table id="grid_table_with_inline_edit" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_with_inline_edit"></div>
 
                                         </div>
@@ -1103,7 +1103,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqGrid_with_actions_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_with_actions" class="table table-bordered"></table>
+                                            <table id="grid_table_with_actions" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_with_actions"></div>
 
                                         </div>
@@ -1147,7 +1147,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,jqGrid_with_no_data_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
-                                            <table id="grid_table_with_no_data" class="table table-bordered"></table>
+                                            <table id="grid_table_with_no_data" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_with_no_data"></div>
                                         </div>
                                     </div>
@@ -1191,11 +1191,11 @@
                                     <div class="col-sm-12">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,jqGrid_with_data_formatters_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
                                             <div class="pad-top-20">
-                                                <table id="grid_with_formatter_table" class="table table-bordered"></table>
+                                                <table id="grid_with_formatter_table" class="table table-bordered word-break"></table>
                                                 <div id="grid_with_formatter_pager"></div>
                                             </div>
                                             <div class="pad-top-20">
-                                                <table id="grid_with_formatter_2_table" class="table table-bordered"></table>
+                                                <table id="grid_with_formatter_2_table" class="table table-bordered word-break"></table>
                                                 <div id="grid_with_formatter_2_pager"></div>
                                             </div>
 
@@ -1251,12 +1251,12 @@
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,jq_with_lot_of_columns_and_data_formatters_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
                                             <div class="pad-top-20">
                                                 <h5 class="no-margin-top text-danger"><strong>Not recommended</strong></h5>
-                                                <table id="grid_with_lot_of_columns_and_data_formatters_table_1" class="table table-bordered"></table>
+                                                <table id="grid_with_lot_of_columns_and_data_formatters_table_1" class="table table-bordered word-break"></table>
                                                 <div id="grid_with_lot_of_columns_and_data_formatters_pager_1"></div>
                                             </div>
                                             <div class="pad-top-20">
                                                 <h5 class="no-margin-top text-success"><strong>Recommended</strong></h5>
-                                                <table id="grid_with_lot_of_columns_and_data_formatters_table_2" class="table table-bordered"></table>
+                                                <table id="grid_with_lot_of_columns_and_data_formatters_table_2" class="table table-bordered word-break"></table>
                                                 <div id="grid_with_lot_of_columns_and_data_formatters_pager_2"></div>
                                             </div>
                                         </div>
@@ -1273,7 +1273,7 @@
         <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2018 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
@@ -1427,7 +1427,7 @@
                 { label: 'First Name', name: 'firstname', key: true, width: "100" },
                 { label: 'Last Name', name: 'lastname' },
                 { label: 'Username', name: 'username' },
-                { label: 'Hobby', name: 'jobtype' },
+                { label: 'Hobby', name: 'jobtype', classes: 'word-break' },
                 { label: 'Nickname', name: 'codename' },
                 { label: 'Spiritual Animal', name: 'spirit_animal' }
             ]
