--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -30,7 +30,11 @@
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
-<!-- End Google Tag Manager --></head>
+<!-- End Google Tag Manager -->
+
+<!-- Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
+<script> (function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:735784,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1; r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script>
+<!-- End Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ --></head>
 <!--[if lt IE 9]>
 <body class="lt-ie9">
 <![endif]-->
@@ -1273,7 +1277,7 @@
         <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2018 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
