BugFix(Selectize): Fixed plugin reference link

--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -1110,7 +1110,7 @@
                                 <div class="col-sm-12 mg-top-20">
                                     <div class="alert alert-info" role="alert">
                                         <p><i class="fa fa-info-circle"></i>
-                                            Based on the selectize plugin with documentation on <a href="http://brianreavis.github.io/selectize.js/" class="alert-link">http://brianreavis.github.io/selectize.js/</a>
+                                            Based on the selectize plugin with documentation on <a href="https://github.com/selectize/selectize.js" class="alert-link">https://github.com/selectize/selectize.js</a>
                                         </p>
                                     </div>
                                 </div>
