--- a/demo/plugins_versions.html
+++ b/demo/plugins_versions.html
@@ -765,8 +765,8 @@
                                         </tr>
                                         <tr>
                                             <td><a href="plugin_introjs.html">Intro</a></td>
-                                            <td><span class="label label-info">2.3.0</span></td>
-                                            <td><span class="label label-warning">modified</span></td>
+                                            <td><span class="label label-info">2.7.0</span></td>
+                                            <td><span class="label label-warning">modified css</span></td>
                                         </tr>
                                         <tr>
                                             <td><a href="plugin_jqgrid.html">jqGrid</a></td>
