--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -557,6 +557,12 @@
                             </a>
                         </li>
 
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/sortable.html">
+                                <span class="menu-text">Sortable</span>
+                            </a>
+                        </li>
+
                         <li class="menu-item menu-item-has-children">
                             <a href="javascript:void(0)">
                                 <span class="menu-text">Stats</span>
