Feature(Layout): Added flexbox cards

--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -349,6 +349,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
+                                <span class="menu-text">Flexbox cards</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#css-page-header">
                                 <span class="menu-text">Page header</span>
                             </a>
