--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -350,6 +350,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
+                                <span class="menu-text">Flexbox cards</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#css-page-header">
                                 <span class="menu-text">Page header</span>
                             </a>
@@ -3558,7 +3563,7 @@
                             </div>
                         </section>
                         
-                        <section id="css-panels" class="pad-top-30">
+                        <section id="flexbox-cards" class="pad-top-30">
                             <div class="show-panel code-example">
                                 <div class="show-panel-body code-example">
                                     <h2><strong>Flexbox cards</strong></h2>
