--- a/demo/plugin_data_formatters.html
+++ b/demo/plugin_data_formatters.html
@@ -348,7 +348,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#flexbox-cards">
                                 <span class="menu-text">Flexbox cards</span>
                             </a>
                         </li>
