--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -582,6 +582,11 @@
                             </ul>
                         </li>
 
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/plugin_table_paster.html">
+                                <span class="menu-text">Table paster</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
